--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@emotion/styled": "^11.14.0",
         "@inertiajs/react": "^1.2.0",
         "@mui/material": "^6.1.10",
+        "@vitejs/plugin-react": "^4.3.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
