--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@inertiajs/react": "^1.2.0",
         "@mui/icons-material": "^6.1.10",
         "@mui/material": "^6.1.10",
+        "@mui/x-data-grid": "^7.23.1",
         "@vitejs/plugin-react": "^4.3.4",
         "i18next-browser-languagedetector": "^8.0.2",
         "i18next-http-backend": "^3.0.1",
