--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.0",
         "react-i18next": "^15.1.4",
+        "react-spinners": "^0.15.0",
         "stylis-plugin-rtl": "^2.1.1"
     }
 }
